Create header and block with work years

--- a/source/sass/global/__variables.scss
+++ b/source/sass/global/__variables.scss
@@ -4,3 +4,6 @@ $tablet-width: 768px;
 $mobile-width: 320px;
 
 /* colors */
+$orangeColor: #F7654A;
+$greyColor: #999999;
+$headerYearsBlockBg: #F7F7F7;
