--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -4,4 +4,5 @@
 @import "./global/__global.scss";
 
 /* components */
-
+@import "./components/__header.scss";
+@import "./components/__workYears.scss";
